--- a/html/menuWindow.html
+++ b/html/menuWindow.html
@@ -86,7 +86,8 @@
           >
             Clear queue
           </button>
-          <button onclick="startQueue()">Start</button>
+          <button id='start' style='display: block;' onclick="startQueue()">Start</button>
+          <button id='stop' style='display: none;' onclick="stopQueue()">Stop</button>
         </div>
       </section>
     </main>
