--- a/html/intervalWindow.html
+++ b/html/intervalWindow.html
@@ -3,11 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <title>Interval</title>
+    <link rel="stylesheet" href="../styles/main.css" />
+    <link rel="stylesheet" href="../styles/intervalWindow.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&family=Train+One&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
+    <header>
+      <h1>Onoes!</h1>
+    </header>
     <main>
-      <h1 id="breakTitle">✨Onoes! Look away!✨</h1>
-      <p id="breakBody"></p>
+      <h2 id="breakTitle"></h2>
+      <p id="breakContent"></p>
     </main>
     <script>
       window.electron.getBreakContent('breakTitle');
