add webpack to bundle one file so it will work with electrons sandbox security thing. Very happy about it. Oh well.

--- a/html/menuWindow.html
+++ b/html/menuWindow.html
@@ -87,8 +87,12 @@
           >
             Clear queue
           </button>
-          <button id='start' style='display: block;' onclick="startQueue()">Start</button>
-          <button id='stop' style='display: none;' onclick="stopQueue()">Stop</button>
+          <button id="start" style="display: block" onclick="startQueue()">
+            Start
+          </button>
+          <button id="stop" style="display: none" onclick="stopQueue()">
+            Stop
+          </button>
         </div>
       </section>
     </main>
