--- a/html/intervalWindow.html
+++ b/html/intervalWindow.html
@@ -20,8 +20,6 @@
       <h2 id="breakTitle"></h2>
       <p id="breakContent"></p>
     </main>
-    <script>
-      window.electron.getBreakContent('breakTitle');
-    </script>
+    <script>window.electron.getBreakContent('breakTitle');</script>
   </body>
 </html>
