favicon and docs and showing current session

--- a/html/menuWindow.html
+++ b/html/menuWindow.html
@@ -79,6 +79,7 @@
           <div id="form-errors"></div>
           <button type="button" onclick="addSession()">Add session</button>
         </form>
+        <h2 id="sessionName"></h2>
         <ol id="sessionQueueList"></ol>
         <div class="list-menu">
           <button
